# FitNear

./: .gitignore  .ruff.toml  alembic.ini  main.py  pyproject.toml
application/: constants.py  errors.py
application/domain/entities/: token.py
application/dto/: security.py  token.py  user.py
application/interfaces/: communication.py  generator.py  localization.py  security.py  template.py  token.py  transaction.py  user.py
application/interfaces/repositories/: __init__.py  token.py  user.py
application/services/: auth.py
config/: __init__.py  config.py
controllers/http/: __init__.py
controllers/http/v1/: auth.py  (+1 more)
controllers/schemas/: user.py
core/: config.py  config_path.py  errors.py
core/i18n/: messages.pot
core/registrar/: __init__.py  app.py  exception_handlers.py  lifespan.py
di/: __init__.py  application.py  config.py  infrastructure.py  ioc.py
domain/entities/: token.py  user.py
i18n/: messages.pot  messages.pot.bak
infrastructure/: confirm_email_template.html  generator.py  localization.py  security.py  template.py
infrastructure/communication/: email.py
infrastructure/migrations/: env.py
infrastructure/models/: __init__.py  auth.py  base.py  token.py  user.py
infrastructure/repositories/: auth.py  token.py  user.py
infrastructure/resources/: database.py
infrastructure/utils/: converter.py  formatter.py
registrar/: __init__.py  app.py  error_handlers.py  exception_handlers.py  lifespan.py
src/core/: error.py  errors.py
src/infrastructure/: generator.py  localization.py  security.py
templates/: confirm_email.html
(+59 files in other folders)
