[project]
name = "fitnear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.15"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "babel>=2.18.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "loguru>=0.7.3",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
